# arithmetic-expression-evaluator

./: CMakeLists.txt  README.md
libarithmetic/ast/: AST.cpp  AST.h
libarithmetic/eval/: Evaluator.cpp  Evaluator.h
libarithmetic/parse/: Parser.cpp  Parser.h  Token.cpp  Token.h
scripts/: build.sh  test.sh  xcode.sh
tests/: evaluate_tests.cpp  tokenize_tests.cpp
